<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center"
    >

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/oval"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="#FFF"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/juventus"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juventus"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/profil_juventus"
            android:textAlignment="center"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>