<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FinalActivity">

    <TextView
        android:layout_width="78dp"
        android:layout_height="61dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="357dp"
        android:gravity="center"
        android:text="@string/vs"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="494dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="189dp"
        android:background="?android:selectableItemBackground"
        android:onClick="generate"
        android:text="@string/tampilkan_score"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="619dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="64dp"
        android:background="?android:selectableItemBackground"
        android:text="@string/halaman_utama"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tim_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="428dp"
        android:text="@string/tim_a"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tim_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="278dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="428dp"
        android:text="@string/tim_b"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hasil_a"
        android:layout_width="62dp"
        android:layout_height="76dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="303dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hasil_b"
        android:layout_width="60dp"
        android:layout_height="78dp"
        android:layout_marginStart="305dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="301dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>